Add some apps to the lab network for exposure to projects

--- a/app/docker/docker-compose.elasticsearch.yml
+++ b/app/docker/docker-compose.elasticsearch.yml
@@ -19,7 +19,13 @@ services:
       retries: 3
     tmpfs:
       - /tmp
+    networks:
+      - default
+      - lab
 
 networks:
   default:
     name: dab_apps
+  lab:
+    external:
+      name: lab
