--- a/app/docker/docker-compose.kafka.yml
+++ b/app/docker/docker-compose.kafka.yml
@@ -11,6 +11,9 @@ services:
     depends_on:
       - zookeeper
     restart: on-failure
+    networks:
+      - default
+      - lab
     environment:
       KAFKA_ZOOKEEPER_CONNECT: 'zookeeper:2181'
       KAFKA_ADVERTISED_LISTENERS: 'PLAINTEXT://kafka:9092'
@@ -20,6 +23,8 @@ services:
       - /tmp
 
 networks:
+  default:
+    name: dab_apps
   lab:
     external:
       name: lab
