--- a/app/docker/docker-compose.couchdb.yml
+++ b/app/docker/docker-compose.couchdb.yml
@@ -15,6 +15,9 @@ services:
     restart: on-failure
     tmpfs:
       - /tmp
+    networks:
+      - default
+      - lab
 
 volumes:
   couchdb:
@@ -22,3 +25,6 @@ volumes:
 networks:
   default:
     name: dab_apps
+  lab:
+    external:
+      name: lab
