--- a/app/docker/docker-compose.redis.yml
+++ b/app/docker/docker-compose.redis.yml
@@ -21,7 +21,13 @@ services:
       - '16379:6379'
     tmpfs:
       - /tmp
+    networks:
+      - default
+      - lab
 
 networks:
   default:
     name: dab_apps
+  lab:
+    external:
+      name: lab
