All boolean env vars now take true or false
Instead of using yes or no for some.

Fixes #234

--- a/tests/docker-compose.yml
+++ b/tests/docker-compose.yml
@@ -11,7 +11,7 @@ services:
   tests:
     image: 'nekroze/containaruba:alpine'
     environment:
-      DAB_AUTOUPDATE: 'no'
+      DAB_AUTOUPDATE: 'false'
       DAB_WRAPPER_PATH: "${PWD:-/usr/bin}/dab"
     volumes:
       - ./features:/usr/src/app/features
@@ -37,4 +37,4 @@ services:
       - ../app:/tmp/out
       - ../tests/tour.sh:/root/.tour.sh
     environment:
-      DAB_AUTOUPDATE: 'no'
+      DAB_AUTOUPDATE: 'false'
