--- a/tests/docker-compose.local.yml
+++ b/tests/docker-compose.local.yml
@@ -4,7 +4,7 @@ services:
 
   tests:
     environment:
-      DAB_AUTOUPDATE: 'no'
+      DAB_AUTOUPDATE: 'false'
       DAB_REPO_PATH: /tmp/dab/dab
       DAB_CONF_PATH: /tmp/dab/.config/dab
       HOME: /tmp/dab
