DAB_AUTOUPDATE_WRAPPER and DAB_AUTOUPDATE_COMPLETION are ignored when DAB_AUTOUPDATE=false

--- a/tests/docker-compose.yml
+++ b/tests/docker-compose.yml
@@ -12,6 +12,7 @@ services:
     image: 'nekroze/containaruba:alpine'
     environment:
       DAB_AUTOUPDATE: 'false'
+      DAB_AUTOUPDATE_IMAGE: 'false'
       DAB_WRAPPER_PATH: "${PWD:-/usr/bin}/dab"
     volumes:
       - ./features:/usr/src/app/features
