--- a/app/docker/docker-compose.ansible.yml
+++ b/app/docker/docker-compose.ansible.yml
@@ -13,11 +13,12 @@ services:
       description: 'Automated configuration management'
     environment:
       - HOME
-    user: "$DAB_UID:$DAB_GID"
+    user: "$DAB_UID:$DAB_DOCKER_GID"
     volumes:
       - "$HOME:$HOME"
       - "$HOST_PWD:$HOST_PWD"
       - "$HOST_PWD:/ansible/playbooks"
+      - /var/run/docker.sock:/var/run/docker.sock
       - logs:/var/log/ansible
     working_dir: "$HOST_PWD"
     tmpfs:
