--- a/app/docker/docker-compose.ansible.yml
+++ b/app/docker/docker-compose.ansible.yml
@@ -13,6 +13,10 @@ services:
       description: 'Automated configuration management'
     environment:
       - HOME
+      - DAB_GID
+      - DAB_UID
+      - DAB_USER
+      - DAB_DOCKER_GID
     volumes:
       - "$HOME:$HOME"
       - "$HOST_PWD:$HOST_PWD"
