--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,11 +6,24 @@ notify:
 
 workflows:
   version: 2
+
   'Review & Test':
     jobs:
       - 'Danger Automated Code Review'
       - 'Feature Testing'
       - 'UX Regression Testing'
+
+  'Periodic Stable Branch Updates':
+    jobs:
+      - 'Request Stable Branch Update'
+
+    triggers:
+      - schedule:
+          cron: "0 0 * * 1,3"
+          filters:
+            branches:
+              only:
+                - master
 
 jobs:
   'Danger Automated Code Review':
@@ -21,7 +34,7 @@ jobs:
       - checkout
 
       - run:
-          name: Danger
+          name: danger
           command: ./scripts/danger.sh
 
 
@@ -103,3 +116,14 @@ jobs:
 
       - store_test_results:
           path: /tmp/dab/test_results
+
+  'Request Stable Branch Update':
+    machine: true
+    steps:
+
+      - checkout
+
+      - run:
+          name: request
+          command: ./scripts/request-stable-update.sh
+
