--- a/app/docker/docker-compose.selenium.yml
+++ b/app/docker/docker-compose.selenium.yml
@@ -10,7 +10,8 @@ services:
       com.centurylinklabs.watchtower.enable: 'true'
     shm_size: '2gb'
     environment:
-      START_XVFB: 'true'
+      - "START_XVFB='true'"
+      - "TZ=${DAB_APPS_SELENIUM_TZ:-UTC}"
     networks:
       - lab
     expose:
