--- a/app/docker/docker-compose.minio.yml
+++ b/app/docker/docker-compose.minio.yml
@@ -18,6 +18,8 @@ services:
       - minio:/data
     expose:
       - 9000
+    ports:
+      - 9000
     restart: on-failure
     tmpfs:
       - /tmp
