--- a/app/docker/docker-compose.portainer.yml
+++ b/app/docker/docker-compose.portainer.yml
@@ -10,6 +10,8 @@ services:
       com.centurylinklabs.watchtower.enable: 'true'
     expose:
       - 9000
+    ports:
+      - 9000
     command: -H unix:///var/run/docker.sock
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
