--- a/app/docker/docker-compose.mitmproxy.yml
+++ b/app/docker/docker-compose.mitmproxy.yml
@@ -21,6 +21,9 @@ services:
     expose:
       - 8080
       - 8081
+    ports:
+      - 8080
+      - 8081
     command: mitmweb --web-iface 0.0.0.0 --ssl-insecure
     tmpfs:
       - /tmp
