--- a/app/docker/docker-compose.ntopng.yml
+++ b/app/docker/docker-compose.ntopng.yml
@@ -14,6 +14,8 @@ services:
     network_mode: host
     expose:
       - 3000
+    ports:
+      - 3000
     restart: on-failure
     command: --redis localhost:16379
     tmpfs:
