--- a/app/docker/docker-compose.pgweb.yml
+++ b/app/docker/docker-compose.pgweb.yml
@@ -11,6 +11,8 @@ services:
     restart: on-failure
     expose:
       - 8081
+    ports:
+      - 8081
     environment:
       DATABASE_URL: 'postgres://postgres:postgres@postgres:5432/postgres?sslmode=disable'
     depends_on:
