Passthrough DAB_APPS_* env vars to their apps with the prefix removed

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,6 +18,7 @@ workflows:
     jobs:
       - 'Feature Testing'
       - 'UX Regression Testing'
+      - 'Execution Profile'
 
   'Periodic Stable Branch Updates':
     jobs:
@@ -158,6 +159,20 @@ jobs:
           name: Clear test results
           when: on_fail
           command: rm -rf /tmp/dabux/test_results || true
+
+  'Execution Profile':
+    machine: true
+    steps:
+
+      - checkout
+
+      - run:
+          name: Install Docker Compose
+          command: |
+            curl -L https://github.com/docker/compose/releases/download/1.19.0/docker-compose-`uname -s`-`uname -m` > ~/docker-compose
+            chmod +x ~/docker-compose
+            sudo mv ~/docker-compose /usr/local/bin/docker-compose
+
 
       - run:
           name: Profile
