--- a/app/docker/docker-compose.deck-chores.yml
+++ b/app/docker/docker-compose.deck-chores.yml
@@ -12,5 +12,7 @@ services:
       com.centurylinklabs.watchtower.enable: 'true'
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
+    env_file:
+      - /tmp/denvmux/deck-chores.env
     tmpfs:
       - /tmp
