--- a/app/docker/docker-compose.kafka-topics-ui.yml
+++ b/app/docker/docker-compose.kafka-topics-ui.yml
@@ -8,6 +8,8 @@ services:
     labels:
       description: 'Web interface for inspecting Kafka topics'
       com.centurylinklabs.watchtower.enable: 'true'
+    env_file:
+      - /tmp/denvmux/kafka-topics-ui.env
     environment:
       KAFKA_REST_PROXY_URL: 'http://kafka-rest:8082'
       KAFKA_REST_BOOTSTRAP_SERVERS: "PLAINTEXT://${DAB_APPS_KAFKA_REST_TARGET_KAFKA:-kafka}:9092"
