--- a/app/docker/docker-compose.openvas.yml
+++ b/app/docker/docker-compose.openvas.yml
@@ -17,6 +17,8 @@ services:
       - 443
     ports:
       - 443
+    env_file:
+      - /tmp/denvmux/openvas.env
     environment:
       PUBLIC_HOSTNAME: localhost
       OV_PASSWORD: "${DAB_APPS_OPENVAS_PASSWORD:-admin}"
