--- a/app/docker/docker-compose.xsstrike.yml
+++ b/app/docker/docker-compose.xsstrike.yml
@@ -13,6 +13,8 @@ services:
        - lab
     labels:
       description: 'Advanced XSS detection suite'
+    env_file:
+      - /tmp/denvmux/xsstrike.env
     tmpfs:
       - /tmp
 
