--- a/app/docker/docker-compose.adminer.yml
+++ b/app/docker/docker-compose.adminer.yml
@@ -12,6 +12,8 @@ services:
     networks:
       - default
       - lab
+    env_file:
+      - /tmp/denvmux/adminer.env
     environment:
       ADMINER_DEFAULT_SERVER: mysql
     expose:
