--- a/app/docker/docker-compose.consul.yml
+++ b/app/docker/docker-compose.consul.yml
@@ -15,6 +15,8 @@ services:
       - 8500
     ports:
       - 8500
+    env_file:
+      - /tmp/denvmux/consul.env
     environment:
       CONSUL_LOCAL_CONFIG: >
         {
