--- a/app/docker/docker-compose.cyberchef.yml
+++ b/app/docker/docker-compose.cyberchef.yml
@@ -11,6 +11,8 @@ services:
         - "NGINX_TAG=${DAB_APPS_NGINX_TAG:-alpine}"
     labels:
       description: 'The Cyber Swiss Army Knife'
+    env_file:
+      - /tmp/denvmux/cyberchef.env
     expose:
       - 80
     ports:
