--- a/app/docker/docker-compose.dive.yml
+++ b/app/docker/docker-compose.dive.yml
@@ -14,6 +14,8 @@ services:
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
     restart: on-failure
+    env_file:
+      - /tmp/denvmux/dive.env
     tmpfs:
       - /tmp
 
