--- a/app/docker/docker-compose.gaia.yml
+++ b/app/docker/docker-compose.gaia.yml
@@ -14,6 +14,8 @@ services:
       - lab
     volumes:
       - gaia:/data
+    env_file:
+      - /tmp/denvmux/gaia.env
     expose:
       - 8080
     ports:
