--- a/app/docker/docker-compose.grafana.yml
+++ b/app/docker/docker-compose.grafana.yml
@@ -15,6 +15,8 @@ services:
     volumes:
       - grafana:/var/lib/grafana
       - "$DAB_CONF_PATH/apps/grafana/etc/grafana/provisioning:/etc/grafana/provisioning:ro"
+    env_file:
+      - /tmp/denvmux/grafana.env
     environment:
       GF_AUTH_ANONYMOUS_ENABLED: 'true'
     expose:
