--- a/app/docker/docker-compose.huginn.yml
+++ b/app/docker/docker-compose.huginn.yml
@@ -11,6 +11,8 @@ services:
     labels:
       description: 'Create agents that monitor and act on your behalf`admin`password'
       com.centurylinklabs.watchtower.enable: 'true'
+    env_file:
+      - /tmp/denvmux/huginn.env
     environment:
       DATABASE_ADAPTER: postgresql
       DATABASE_HOST: postgres
