--- a/app/docker/docker-compose.kafka.yml
+++ b/app/docker/docker-compose.kafka.yml
@@ -14,6 +14,8 @@ services:
     networks:
       - default
       - lab
+    env_file:
+      - /tmp/denvmux/kafka.env
     environment:
       KAFKA_ZOOKEEPER_CONNECT: 'zookeeper:2181'
       KAFKA_ADVERTISED_LISTENERS: 'PLAINTEXT://kafka:9092'
