--- a/app/docker/docker-compose.localstack.yml
+++ b/app/docker/docker-compose.localstack.yml
@@ -15,6 +15,8 @@ services:
     ports:
       - '4567-4593:4567-4593'
       - 8080
+    env_file:
+      - /tmp/denvmux/localstack.env
     environment:
       SERVICES: "${DAB_APPS_LOCALSTACK_SERVICES:-}"
       DEBUG: "${DAB_APPS_LOCALSTACK_DEBUG:-}"
