--- a/app/docker/docker-compose.portainer.yml
+++ b/app/docker/docker-compose.portainer.yml
@@ -13,6 +13,8 @@ services:
     ports:
       - 9000
     command: -H unix:///var/run/docker.sock
+    env_file:
+      - /tmp/denvmux/portainer.env
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
       - portainer:/data
