--- a/app/docker/docker-compose.postgres.yml
+++ b/app/docker/docker-compose.postgres.yml
@@ -15,6 +15,8 @@ services:
       exposing: 'tcp'
       com.centurylinklabs.watchtower.enable: 'true'
     restart: on-failure
+    env_file:
+      - /tmp/denvmux/postgres.env
     environment:
       PGDATA: /var/lib/postgresql/data/pgdata
     volumes:
