--- a/app/docker/docker-compose.sysdig.yml
+++ b/app/docker/docker-compose.sysdig.yml
@@ -14,6 +14,8 @@ services:
       - /boot:/host/boot:ro
       - /lib/modules:/host/lib/modules:ro
       - /usr:/host/usr:ro
+    env_file:
+      - /tmp/denvmux/sysdig.env
     tmpfs:
       - /tmp
 
