--- a/app/docker/docker-compose.vaultbot.yml
+++ b/app/docker/docker-compose.vaultbot.yml
@@ -15,6 +15,8 @@ services:
       - '--vault_addr=http://vault:8200'
     volumes:
       - "$DAB_CONF_PATH:$DAB_CONF_PATH"
+    env_file:
+      - /tmp/denvmux/vaultbot.env
     tmpfs:
       - /tmp
 
