--- a/app/docker/docker-compose.vyne.yml
+++ b/app/docker/docker-compose.vyne.yml
@@ -15,6 +15,8 @@ services:
       - 9022
     environment:
       PROFILE: 'embedded-discovery'
+    env_file:
+      - /tmp/denvmux/vyne.env
     tmpfs:
       - /tmp
 
