--- a/app/docker/docker-compose.sam.yml
+++ b/app/docker/docker-compose.sam.yml
@@ -14,6 +14,7 @@ services:
     user: "$DAB_UID:$DAB_DOCKER_GID"
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
+      - /tmp:/tmp
       - "$HOME:$HOME"
       - "$HOST_PWD:$HOST_PWD"
     working_dir: "$HOST_PWD"
