Move some lib functions used once to where they are used instead

--- a/app/subcommands/apps/config
+++ b/app/subcommands/apps/config
@@ -9,4 +9,7 @@ set -eu
 
 [ -n "${1:-}" ] || fatality 'must provide an app name'
 
-compose_app_config "$1"
+highlight \
+	--syntax yaml \
+	-O xterm256 \
+	"$DAB/docker/docker-compose.$1.yml"
