Fix conflict between apk and pip PyYAML installs

--- a/app/docker/Dockerfile.ansible
+++ b/app/docker/Dockerfile.ansible
@@ -4,7 +4,7 @@ RUN apk add --no-cache --virtual build-dependencies \
       gcc musl-dev libffi-dev openssl-dev python-dev \
  && apk add --no-cache \
       bash curl tar openssh-client sshpass git python py-boto py-dateutil \
-      py-httplib2 py-jinja2 py-paramiko py-pip py-yaml ca-certificates docker \
+      py-httplib2 py-jinja2 py-paramiko py-pip ca-certificates docker \
  && pip install python-keyczar docker-compose
 
 RUN mkdir -p /etc/ansible /ansible/playbooks \
