Expose Kafkaview web ui port

--- a/app/docker/docker-compose.kafkaview.yml
+++ b/app/docker/docker-compose.kafkaview.yml
@@ -11,6 +11,10 @@ services:
     depends_on:
       - kafka
     restart: on-failure
+    ports:
+      - "${DAB_APPS_KAFKAVIEW_PORT:-6080}:6080"
+    expose:
+      - 6080
     networks:
       - default
       - lab
