Fix build issues with python 2 vs 3 name changes
Alpine package names on their latest versions have been changed and can
now install the binary cryptography module from the package manager.
Some other changes to include pip or enforce an older alpine version
where python 2 is already specified.

Includes small test change to avoid issues with escaping inside gherkin
files.

--- a/app/docker/Dockerfile.sqliv
+++ b/app/docker/Dockerfile.sqliv
@@ -1,4 +1,4 @@
-FROM alpine:latest
+FROM alpine:3.10.0
 
 RUN apk add --no-cache ca-certificates alpine-sdk python2 python2-dev libxslt-dev libxml2-dev py-pip git \
  && update-ca-certificates
