--- a/app/docker/Dockerfile.xsstrike
+++ b/app/docker/Dockerfile.xsstrike
@@ -1,6 +1,6 @@
 FROM alpine:latest
 
-RUN apk add --no-cache ca-certificates python3 git \
+RUN apk add --no-cache ca-certificates python3 py3-pip git \
  && update-ca-certificates
 
 ARG XSSTRIKE_VERSION=3.0.3
