Fix mitmproxy startup after argument was renamed
Service would not start due to unexpected argument. Also a small
addition the dev environment rc file used by direnv to prevent
autoupdate wiping local changes while working on dab.

--- a/app/docker/docker-compose.mitmproxy.yml
+++ b/app/docker/docker-compose.mitmproxy.yml
@@ -26,7 +26,7 @@ services:
     ports:
       - 8080
       - 8081
-    command: mitmweb --web-iface 0.0.0.0 --ssl-insecure
+    command: mitmweb --web-host 0.0.0.0 --ssl-insecure
     tmpfs:
       - /tmp
 
