Use docker compose v2
* Resolve warnings with docker compose files

* Use docker compose (v2) instead of docker-compose (v1)

--- a/app/docker/docker-compose.nikto.yml
+++ b/app/docker/docker-compose.nikto.yml
@@ -17,8 +17,8 @@ services:
       - /tmp
 
 networks:
-  lab:
-    external:
-      name: lab
   default:
     name: dab_apps
+  lab:
+    name: lab
+    external: true
