--- a/app/docker/docker-compose.ansible.yml
+++ b/app/docker/docker-compose.ansible.yml
@@ -33,8 +33,8 @@ services:
 
 volumes:
   logs:
-    external:
-      name: dab_logs
+    name: dab_logs
+    external: true
 
 networks:
   default:
